2011-08-07 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCopt.c: fixed bug #3387421: Incorrect code in revision 6723
	* support/regression/test/compare_2_n.c: added test cases for bug #3387421

2011-08-06 Borut Razem <borut.razem AT gmail.com>

	* doc/Makefile.in: applied patch #3387171:
	  Binary build fails due to documentation cleanup,
	  thanks Strobl Anton
	* src/SDCCopt.c: further enhancements & fixes of patch #2702889:
	  added <= and >= optimizations, optimize > only if IFX
	* support/regression/test/compare_2_n.c: added test cases without IFX

2011-08-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug3368945.c:
	  Fixed bug #3386945.

2011-08-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed bitfield unpacking bug #3386784.

2011-08-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-z80.def:
	  Minor peephole improvements.
	* src/z80/gen.c:
	  Removed incorrect comment regarding arithmetic right shift.

2011-08-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Handle cp, improve accuracy of checking for hl reads in notUsed().
	* src/z80/peeph-z80.def:
	  Minor peephole improvements.
	* src/z80/ralloc2.c:
	  Allow accumulator arguments in bitwise complement.

2011-08-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Fixed bug #3385978.

2011-08-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/bug3381400.c:
	  Don't try to compile the sfr stuff on host.

2011-08-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Minor improvement in 8-bit by literal multiplication.

2011-08-03 Borut Razem <borut.razem AT gmail.com>

	* sdcc development documentation moved from doc to sdcc wiki:
	* doc/builtins.txt: removed,
	  published as Developer Documentation on SDCC wiki at
	  http://sourceforge.net/apps/trac/sdcc/wiki/Builtins
	* doc/macro-sys-design.txt: removed,